# toy_full_text_search_engine

./: .gitignore  README.md  main.py  pyproject.toml
engines/: document.py  indexer.py  searcher.py  text_analyzer.py
