[tool.poetry]
name = "toy_full_text_search_engine"
version = "0.1.0"
description = ""
authors = ["Takuro Niitsuma <bakednt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
nltk = "^3.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
ipdb = "^0.13.3"
python-language-server = {extras = ["all"], version = "^0.34.1"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
